; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_chapters.c_ghb_clear_chapter_list_ui.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_chapters.c_ghb_clear_chapter_list_ui.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"chapters_list\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ghb_clear_chapter_list_ui to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ghb_clear_chapter_list_ui(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @GHB_WIDGET(i32 %7, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %9 = call i32* @GTK_LIST_BOX(i32 %8)
  store i32* %9, i32** %3, align 8
  br label %10

10:                                               ; preds = %14, %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @gtk_list_box_get_row_at_index(i32* %11, i32 0)
  store i32* %12, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %10
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @GTK_CONTAINER(i32* %15)
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @GTK_WIDGET(i32* %17)
  %19 = call i32 @gtk_container_remove(i32 %16, i32 %18)
  br label %10

20:                                               ; preds = %10
  ret void
}

declare dso_local i32* @GTK_LIST_BOX(i32) #1

declare dso_local i32 @GHB_WIDGET(i32, i8*) #1

declare dso_local i32* @gtk_list_box_get_row_at_index(i32*, i32) #1

declare dso_local i32 @gtk_container_remove(i32, i32) #1

declare dso_local i32 @GTK_CONTAINER(i32*) #1

declare dso_local i32 @GTK_WIDGET(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
